bug (height) height was clamped with desktopWidth